--- a/package.json
+++ b/package.json
@@ -1,44 +1,56 @@
 {
-  "name": "clothing-ecom",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:clothing-ecom": "node dist/clothing-ecom/server/server.mjs"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/platform-server": "^17.3.0",
-    "@angular/router": "^17.3.0",
-    "@angular/ssr": "^17.3.5",
-    "express": "^4.18.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.5",
-    "@angular/cli": "^17.3.5",
-    "@angular/compiler-cli": "^17.3.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
-  }
+	"name": "clothing-ecom",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"prettier": "prettier --write 'src/**/*.{js,ts,html,md,less,json}'"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "17.3.0",
+		"@angular/common": "17.3.0",
+		"@angular/compiler": "17.3.0",
+		"@angular/core": "17.3.0",
+		"@angular/forms": "17.3.0",
+		"@angular/platform-browser": "17.3.0",
+		"@angular/platform-browser-dynamic": "17.3.0",
+		"@angular/platform-server": "17.3.0",
+		"@angular/router": "17.3.0",
+		"@angular/ssr": "17.3.5",
+		"@taiga-ui/cdk": "3.75.0",
+		"@taiga-ui/core": "3.75.0",
+		"@taiga-ui/icons": "3.75.0",
+		"@taiga-ui/kit": "3.75.0",
+		"@taiga-ui/styles": "3.75.0",
+		"@tinkoff/ng-dompurify": "4.0.0",
+		"dompurify": "3.0.6",
+		"express": "4.18.2",
+		"rxjs": "7.8.0",
+		"tslib": "2.6.2",
+		"zone.js": "0.14.3"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "17.3.5",
+		"@angular/cli": "17.3.5",
+		"@angular/compiler-cli": "17.3.0",
+		"@types/dompurify": "3.0.5",
+		"@types/express": "4.17.17",
+		"@types/jasmine": "5.1.0",
+		"@types/node": "18.18.0",
+		"autoprefixer": "10.4.19",
+		"jasmine-core": "5.1.0",
+		"karma": "6.4.0",
+		"karma-chrome-launcher": "3.2.0",
+		"karma-coverage": "2.2.0",
+		"karma-jasmine": "5.1.0",
+		"karma-jasmine-html-reporter": "2.1.0",
+		"postcss": "8.4.38",
+		"prettier": "3.2.5",
+		"tailwindcss": "3.4.3",
+		"typescript": "5.4.2"
+	}
 }
