--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@angular/platform-server": "17.3.0",
 		"@angular/router": "17.3.0",
 		"@angular/ssr": "17.3.5",
+		"@taiga-ui/addon-commerce": "^3.75.0",
 		"@taiga-ui/cdk": "3.75.0",
 		"@taiga-ui/core": "3.75.0",
 		"@taiga-ui/icons": "3.75.0",
